--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p>&lt;1 years <br />Frontend Development</p>
+              <p>&lt;1 year <br />Frontend Development</p>
             </div>
             <div class="details-container">
               <img
