Update on Portfolio

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="./assets/profile-pic.jpg" alt="Yuva-Kiran profile picture" class="profile-pic"/>
+        <img src="./assets/profile-pic.png" alt="Yuva-Kiran profile picture" class="profile-pic"/>
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
@@ -190,8 +190,8 @@ As part of my journey in software development during my Computer Science studies
                   class="icon"
                 />
                 <div>
-                  <h3>PostgreSQL</h3>
-                  <p>Basic</p>
+                  <h3>MongoDB</h3>
+                  <p>Intermediate</p>
                 </div>
               </article>
               <article>
@@ -295,11 +295,11 @@ As part of my journey in software development during my Computer Science studies
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Website Security Checker</h2>
+            <h2 class="experience-sub-title project-title">Twitter Clone</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/KYkiran/Expo'"
+                onclick="location.href='https://github.com/KYkiran/X-Clone'"
               >
                 Github
               </button>
@@ -314,11 +314,11 @@ As part of my journey in software development during my Computer Science studies
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Travelling Tracker App</h2>
+            <h2 class="experience-sub-title project-title">Product Manager Application</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/KYkiran/Web-Development-Bootcamp/tree/master/Backend/8.3%20Travel%20Tracker'"
+                onclick="location.href='https://github.com/KYkiran/Basic-Ecommerce-App'"
               >
                 Github
               </button>
