--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@ As part of my journey in software development during my Computer Science studies
               alt="codechef icon"
               class="icon contact-icon"
             />
-            <p><a href="https://www.codechef.com/users/yuvakiran">GeeksforGeeks</a></p>
+            <p><a href="https://www.codechef.com/users/yuvakiran">CodeChef</a></p>
           </div>
         </div>
         <img
